auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-svc
  namespace: insanityid
spec:
  selector:
    app: auth-server
  ports:
  - port: 80
    targetPort: 8080
